# battery-lab-automation

./: .gitignore  BATTERY_FLASK_MIGRATION_HANDOFF.md  README.md  app.py  pyproject.toml  requirements.txt  wsgi.py
battery_lab/: __init__.py  ai_service.py  capacity_csv_audit.py  capacity_matching.py  checklist_view.py  cli.py  conditions.py  config.py  eis_matching.py  eis_timeseries.py  excel_dashboard.py  experiment_import.py  file_io.py  flask_app.py  insights.py  interactive.py  job_models.py  job_service.py  journal.py  matching_service.py  metrics.py  models.py  perf.py  plots.py  render_cache.py  report.py  routes.py  scope.py  ui.py  verification_view.py  viewer_service.py  wonatech_service.py
docs/: 2026-07-01-journal-row-features-report.md  2026-07-01-journal-row-followup-report.md  eis-24hr-confirmation-form.html  eis-24hr-promotion-plan.md  graph-toggle-heatmap-recolor-report.md
eis_fit_handoff/: batch_fit_eis.py  eis_circle_fit.py  xlsx_reader.py
real_reference_outputs/: dashboard.html  report.html  summary_metrics.csv
sample_data/: 1.5act_3T_1__EIS__24hr__20260615.sde  1.5act_3T_1__capacity__cycle100__20260615.csv  1.5act_3T_1__sheet_resistance__20260615.csv  1.5act_3T_1__voltage_profile__selected_cycles__20260615.csv  cell_conditions.csv
scripts/: build_unmatched_checklist.py  diagnose_cluster_threshold.py  diagnose_eis_timeseries.py  verify_render_mapping.py
tests/: test_ai.py  test_append_row_target.py  test_capacity_csv_audit.py  test_capacity_matching.py  test_conditions.py  test_eis_circle_fit.py  test_eis_matching.py  test_eis_timeseries.py  test_excel_dashboard.py  test_experiment_import.py  test_flask_app.py  test_import_commit_flow.py  test_import_journal_fields.py  test_jobs.py  test_journal.py  test_journal_row_detail.py  test_journal_row_replace.py  test_match_report_cache.py  test_matching_verification.py  test_ui.py  (+5 more)
(+20 files in other folders)
