[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-lab-automation"
version = "0.1.3"
description = "Battery Lab Flask integration and analysis tools"
requires-python = ">=3.10"
dependencies = [
  "Flask",
  "streamlit>=1.35",
  "pandas",
  "numpy",
  "scipy",
  "matplotlib",
  "plotly",
  "openpyxl",
  "python-dateutil",
]

[tool.setuptools]
packages = ["battery_lab", "wonatech_parsers"]
py-modules = ["app"]

[tool.setuptools.package-data]
battery_lab = ["templates/battery_lab/*.html"]
