[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-lab-automation"
version = "0.1.3"
description = "Battery Lab Flask integration and analysis tools"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3,<4",
  "streamlit>=1.35",
  "pandas",
  "numpy",
  "scipy",
  "matplotlib",
  "plotly",
  "openpyxl",
  "python-dateutil",
]

[project.optional-dependencies]
server = [
  "gunicorn>=22,<24",
]

[tool.setuptools]
packages = ["battery_lab", "eis_fit_handoff", "wonatech_parsers"]
py-modules = ["app", "wsgi"]

[tool.setuptools.package-data]
battery_lab = ["templates/battery_lab/*.html"]
